tolk-tester/tests/invalid-semantics/err-4190.tolk
struct A {
    ok: coins = grams("0.05"),
    err: int = blockchain.now(),
}

/**
@compilation_should_fail
@stderr not a constant expression
@stderr err: int
 */
